--- a/.github/workflows/dep.yml
+++ b/.github/workflows/dep.yml
@@ -1,18 +1,42 @@
-name: Build and Deploy
-on: [push]
-jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout
-      uses: actions/checkout@master
+name: CI
 
-    - name: vuepress-deploy
-      uses: jenkey2011/vuepress-deploy@master
-      env:
-        ACCESS_TOKEN: ${{ secrets.ERLANGTUI }}
-        TARGET_REPO: zhangliang6666/erlangtui
-        TARGET_BRANCH: master
-        BUILD_SCRIPT: yarn && yarn build
-        BUILD_DIR: docs/.vuepress/dist
-        # CNAME: https://www.xxx.com
+# 在master分支发生push事件时触发。
+on:
+  push:
+    branches:
+      - master
+
+jobs: # 工作流
+  build: # 自定义名称
+    runs-on: ubuntu-latest #运行在虚拟机环境ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [14.x]
+
+    steps: # 步骤
+      - name: Checkout
+        uses: actions/checkout@v1 # 使用的动作。格式：userName/repoName。作用：检出仓库，获取源码。 官方actions库：https://github.com/actions
+
+      - name: Use Node.js ${{ matrix.node-version }} # 步骤2
+        uses: actions/setup-node@v1 # 作用：安装nodejs
+        with:
+          node-version: ${{ matrix.node-version }} # 版本
+
+      - name: run deploy.sh # 步骤3 （同时部署到github和coding）
+        env: # 设置环境变量
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }} # toKen私密变量
+          # CODING_TOKEN: ${{ secrets.CODING_TOKEN }}
+        run: npm install && npm run deploy
+
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@4.1.5 # 作用：将项目构建和部署到github。 https://github.com/JamesIves/github-pages-deploy-action
+        with:
+          branch: gh-pages # The branch the action should deploy to.
+          folder: docs/.vuepress/dist # The folder the action should deploy.
+        # env: # 设置环境变量
+        #   ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }} # toKen私密变量
+        #   BASE_BRANCH: master # 要部署的文件夹所在的分支.
+        #   BRANCH: gh-pages # 部署到的分支
+        #   FOLDER: docs/.vuepress/dist # 要部署的文件夹.
+        # BUILD_SCRIPT: npm install && npm run build && cd docs/.vuepress/dist  && cd - # 部署前要执行的命令（记得cd进入某个目录后，后面要cd -退回开始的目录）
