--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,7 @@ jobs:
           npm install
           npm run build
           cd docs/.vuepress/dist
+          echo 'www.xugaoyi.com\nxugaoyi.com' > CNAME
           git config --global init.defaultBranch $deploy_branch
           git init
           git config user.name ${user_name}
